--- a/app/views/coord_ev/instrumento/index.html
+++ b/app/views/coord_ev/instrumento/index.html
@@ -30,7 +30,8 @@
 						<!--=======MIGAS DE PAN=========-->
 						<nav aria-label="breadcrumb" style="margin-top: 1%">
 							<ol class="breadcrumb">
-							    <li class="breadcrumb-item active" aria-current="page">Home</li>
+							    <li class="breadcrumb-item" aria-current="page"><a href="/dashboard">Home</a></li>
+							    <li class="breadcrumb-item active" aria-current="page">Instrumentos</li>
 							</ol>
 						</nav>
 						<!--=======FIN MIGAS DE PAN=========-->
